# contractanalyzer

./: .env.example  .gitignore  Dockerfile  README.md  app.py  deploy-azure.sh  docker-compose.yml  function_app.py  main.py  n8n_client.py  package.json  pyproject.toml  requirements.txt  server.js  startup.sh  test-workflow.sh
.github/workflows/: azure-deploy.yml  (+5 more)
agents/: strapped_ai.md  vela_law.md
behaviors/: strapped_ai.yaml  vela_law.yaml
bundles/: calendar_orchestration.yaml  calendar_reader.yaml  email_parsing.yaml  email_reader.yaml  escalation_handler.yaml  notifications.yaml  preferences_manager.yaml  reply_drafting.yaml
core/: __init__.py  audit.py  config.py  database.py  db_models.py  graph_client.py  models.py  table_storage.py
dashboard/: app.py
data/: default_preferences.json  seed_preferences.py
infrastructure/: deploy.sh  logic_app_template.json
n8n-workflows/: example-contract-workflow.json
public/: index.html
recipes/: escalate.yaml  new_request.yaml  update_prefs.yaml
sample-data/: case_data.csv  rules_sheet.csv
templates/: admin.html  analyze.html  index.html  login.html  subscribe.html
tests/: __init__.py  conftest.py  test_calendar.py  test_email_parsing.py  test_email_tools.py  test_escalation.py  test_models.py  test_notification.py  test_preferences.py
tools/: __init__.py  calendar_tools.py  email_parser.py  email_tools.py  escalation_tools.py  notification_tools.py  preferences_tools.py  reply_tools.py
web/: __init__.py  app.py  auth.py
workflows/: attorney-commission-calculator.json  sample-webhook-workflow.json
(+6 files in other folders)
