[project]
name = "strapped-ai"
version = "1.0.0"
description = "Strapped AI — AI-powered scheduling assistant built on Microsoft Amplifier"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Your Firm LegalTech Team" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "SIM"]
ignore = ["ANN101", "ANN102", "ANN401"]
